--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,8 @@
 <%= render 'shared/navbar_menu' %>
 
-<%= render 'pods/banner_large' %>
+<%= render 'pods/banner_large_pod' %>
+<%= render 'pods/four_cards_pod' %>
+<%= render 'pods/lifestyle_image_product_left_pod' %>
+<%= render 'pods/lifestyle_image_product_right_pod' %>
+<%= render 'pods/content_left_image_pod' %>
+<%= render 'pods/join_the_family_pod' %>
