--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,3 +6,5 @@
 <%= render 'pods/lifestyle_image_product_right_pod' %>
 <%= render 'pods/content_left_image_pod' %>
 <%= render 'pods/join_the_family_pod' %>
+
+<%= render 'shared/footer' %>
