--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,62 +1,62 @@
 <div class="footer-container">
     <div class="bg-dark-custom rounded-xl grid grid-cols-2 gap-7 ">
        
-        <div class="py-20 ps-25">   
-            <%= image_tag 'peak_logo_white.svg'%>
-            <p class="pt-10 text-white text-[14px]">
+        <div class="flex flex-col items-center lg:items-start col-span-2 lg:col-span-1 p-10 lg:py-20 lg:ps-25 lg:pe-0">   
+            <%= image_tag 'peak_logo_white.svg', class: "w-[50%] lg:w-[32%]" %>
+            <p class="pt-10 text-center lg:text-start text-white text-[14px]">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             </p>
         </div>  
 
-        <div class="flex flex-col py-20 pe-25">
+        <div class="col-span-2 lg:col-span-1 flex flex-col lg:py-20 p-10 py-0 lg:pe-25 lg:ps-30">
             <div class="grid grid-cols-2 grow"> 
-                <div class="flex flex-col justify-center ps-5">
-                    <a class="text-white">
+                <div class="flex flex-col justify-start lg:justify-center ps-5">
+                    <a class="text-white mb-3">
                         Home
                     </a>
 
-                    <a class="text-white">
+                    <a class="text-white mb-3">
                         Shop
                     </a>
 
-                    <a class="text-white">
+                    <a class="text-white mb-3">
                         BLog
                     </a>
 
-                    <a class="text-white">
+                    <a class="text-white mb-3">
                         FAQs
                     </a>
 
-                    <a class="text-white">
+                    <a class="text-white mb-3">
                         Size Chart
                     </a>
                 </div>
 
-                <div class="flex flex-col justify-center ps-5">
-                    <a class="text-white">
+                <div class="flex flex-col justify-start lg:justify-center ps-5">
+                    <a class="text-white mb-3">
                         Term and Conditions
                     </a>
 
-                    <a class="text-white">
+                    <a class="text-white mb-3">
                         Privacy Policy
                     </a>
 
-                    <a class="text-white">
+                    <a class="text-white mb-3">
                         Returns and Refunds
                     </a>
 
-                    <a class="text-white">
+                    <a class="text-white mb-3">
                         POPIA
                     </a>
 
-                    <a class="text-white">
+                    <a class="text-white mb-3">
                         Contact
                     </a>
                 </div>
             </div>
-            <div>
+            <div class="pt-10 lg:pt-0">
                 <%= image_tag 'payment_options.png'%>
             </div>
         </div>
