--- a/app/views/pages/_product_show_page.html.erb
+++ b/app/views/pages/_product_show_page.html.erb
@@ -1,6 +1,6 @@
 <div class="pod-container">
     <div class="grid grid-cols-2 gap-7">
-        <div class="col-span-1 grid grid-cols-2 gap-7">
+        <div class="col-span-2 lg:col-span-1 grid grid-cols-2 gap-7">
             <div class="col-span-2 bg-grey-custom rounded-xl overflow-hidden aspect-square flex items-center justify-center">
                 <%= image_tag 'peak.png', class:"w-[80%]" %>
             </div>
@@ -17,19 +17,19 @@
                 <%= image_tag 'peak.png', class:"w-[80%]" %>
             </div>
         </div>
-        <div class="col-span-1 ps-6">
+        <div class="col-span-2 lg:col-span-1 lg:ps-6">
             <p class="font-extralight">
                 PK - PK-MENS - PKLOUWILLIAMS-SMN01
             </p>
-            <h2 class="text-[30px] text-center lg:text-start lg:text-[45px] font-semibold mb-4 w-full lg:leading-16">
+            <h2 class="text-[30px] lg:text-start lg:text-[45px] font-semibold mb-4 w-full lg:leading-16">
                 PEAK Basketball Shoes Lou Williams Streetball Master Navy
             </h2>
             <p class="product-price-large">
                 R1999.00
             </p>
             <div class="pt-10 ">
-                <form class="flex flex-row justify-between items-end w-[55%]">
-                    <div class="me-5">
+                <form class="flex flex-row flex-wrap lg:flex-nowrap justify-between items-end w-full lg:w-[55%]">
+                    <div class="lg:me-5 w-[33%] flex lg:justify-center flex-col order-1">
                         <label for="size" class="block mb-2 text-xl font-medium text-gray-700">
                             Size (UK)
                         </label>
@@ -52,7 +52,7 @@
                         </div>
                     </div>
 
-                    <div class="me-5">
+                    <div class="lg:me-5 w-[33%] flex lg:justify-center flex-col order-2">
                         <label for="size" class="block mb-2 text-xl font-medium text-gray-700">
                             Quantity
                         </label>
@@ -75,9 +75,9 @@
                         </div>
                     </div>
 
-                    <button type="button" class="btn-peak-red-solid rounded-xl md:me-3 h-12 flex items-center">Add To Cart</button>
+                    <button type="button" class="btn-peak-red-solid rounded-xl md:me-3 h-12 flex items-center w-full mt-5 lg:mt-0 order-4 lg:order-3">Add To Cart</button>
 
-                    <button type="button" class="btn-grey-light h-12 flex items-center group">
+                    <button type="button" class="btn-grey-light h-12 flex items-center group order-3 lg:order-4">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" 
                             stroke-width="1.5" stroke="currentColor" 
                             class="size-6 group-hover:stroke-white">
@@ -88,7 +88,7 @@
 
                 </form>
 
-                <div class="grid grid-cols-3 gap-3 mt-10 w-[55%]">
+                <div class="grid grid-cols-3 gap-3 mt-10 w-full lg:w-[55%]">
                     <a href="#" class="aspect-square flex items-center justify-center border border-dark-custom bg-grey-custom rounded-md">
                         <%= image_tag 'peak.png', class:"w-[80%]" %>
                     </a>
@@ -111,7 +111,26 @@
                     </p>
                 </div>
 
-                <div class="w-[55%]">
+                <div class="w-full lg:w-[55%] mt-10" data-controller="accordion">
+
+                    <div id="accordion-open" data-accordion="open">
+                        <h2 id="accordion-open-heading-1">
+                            <button type="button" class="border-t-1 border-black flex items-center justify-between w-full px-5 pb-5 pt-3 font-medium rtl:text-right bg-transparent" data-accordion-target="#accordion-open-body-1" aria-expanded="true" aria-controls="accordion-open-body-1">
+                                <span class="flex items-center">
+                                    Shipping and Returns
+                                </span>
+                                <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+                                </svg>
+                            </button>
+                        </h2>
+                        <div id="accordion-open-body-1" class="hidden px-5" aria-labelledby="accordion-open-heading-1">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </div>
+                    </div>
 
                 </div>
             </div>
@@ -119,3 +138,5 @@
         </div>
     </div>
 </div>
+
+<%= render 'shared/recommended_products' %>
