--- a/app/views/shared/_navbar_menu.html.erb
+++ b/app/views/shared/_navbar_menu.html.erb
@@ -1,11 +1,11 @@
-<nav class="bg-white border-gray-200 fixed w-full z-1">
+<nav class="at-top border-gray-200 fixed w-full z-5" data-controller="navbar" data-navbar-target="nav">
     <div class="flex flex-wrap items-center justify-between mx-auto px-4 py-5 lg:pt-10 lg:pb-5 pb-0 xl:w-[90%]">
         <div class="flex flex-row items-center">
             <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
                 <%= image_tag "peak_logo_red.svg", alt: "EasyReg Logo" , class: "h-full object-contain" %>
             </a>
             <div class="ms-7">
-                <ul class="hidden lg:flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white">
+                <ul class="hidden bg-transparent lg:flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
                     <li>
                     <a href="#" class="nav-link-styling" aria-current="page">Mens</a>
                     </li>
