--- a/app/views/pages/_cart_page.html.erb
+++ b/app/views/pages/_cart_page.html.erb
@@ -1,6 +1,6 @@
 <div class="checkout-container">
     <div class="pb-10 flex items-center flex-col">
-        <h2 class="uppercase text-[30px] text-center lg:text-[55px] font-semibold mb-4 w-full lg:leading-18">
+        <h2 class="uppercase pod-page-title">
             My Cart
         </h2>
         <div class="red-accent-pill-large"></div>
