--- a/app/views/pages/_product_index_page.html.erb
+++ b/app/views/pages/_product_index_page.html.erb
@@ -1,6 +1,6 @@
 <div class="pod-container">
     <div class="pb-10 flex items-center flex-col" data-controller="filter-toggle">
-        <h2 class="text-[30px] text-center lg:text-[55px] font-semibold w-full lg:leading-18">
+        <h2 class="pod-page-title !mb-0">
             All Products
         </h2>
         <div class="red-accent-pill-large"></div>
