--- a/app/views/pages/_payment_details.html.erb
+++ b/app/views/pages/_payment_details.html.erb
@@ -1,6 +1,6 @@
 <div class="w-[90%] lg:w-[65%] mx-auto pt-10 lg:py-30">
     <div class="pb-10 flex items-center flex-col">
-        <h2 class="uppercase text-[30px] text-center lg:text-[55px] font-semibold mb-4 w-full lg:leading-18">
+        <h2 class="uppercase pod-page-title">
             Review My order
         </h2>
         <div class="red-accent-pill-large"></div>
@@ -12,47 +12,141 @@
                 <p class="text-xl lg:text-2xl font-medium">
                     Edit Address
                 </p>
-                <div class="grid grid-cols-2">
-                    <hr class="col-span-2 mt-3 mb-5">
-                    <div>
-                        <span class="bg-grey-custom uppercase px-3 py-1 rounded-full text-xs">
-                            residential
-                        </span>
-                        <p class="font-medium mt-2 w-[75%]">
-                            204 Fordyce Road, Walmer,
-                            Gqeberha, 6065
-                        </p>
-                        <div class="flex justify-between flex-row pt-3 w-[75%]">
-                            <p class="text-xs text-subtext-grey">
-                                Christopher Strauss
-                            </p>
-                            <p class="text-xs text-subtext-grey">
-                                0824460590
-                            </p>
+                <form>
+                    <div class="grid grid-cols-2">
+                        <hr class="col-span-2 mt-3 mb-5">
+
+                        <div class="flex flex-row col-span-2 lg:col-span-1">
+                            <div class="w-full h-[45px] relative flex lg:me-3 items-center">
+                                <label for="has_medical_aid_yes" class="custom-radio-label ps-5">
+                                    Residential
+                                </label>
+                                <input type="radio" name="has_medical_aid" id="has_medical_aid_yes" 
+                                    class="peer radio_styling z-10 relative" value="yes">
+                                <div class="custom-radio-buttons"></div>
+                            </div>
                         </div>
-                    </div>
+                        
+                        <div class="flex flex-row col-span-2 lg:col-span-1 mt-5">
+                            <div class="w-full h-[45px] relative flex items-center">
+                                <label for="has_medical_aid_no" class="custom-radio-label ps-5">
+                                    Business
+                                </label>
+                                <input type="radio" name="has_medical_aid" id="has_medical_aid_no" 
+                                    class="peer radio_styling z-10 relative" value="no">
+                                <div class="custom-radio-buttons"></div>
+                            </div>
+                        </div>
 
-                    <div class="flex">
-                        <a class="text-base text-peak-red w-full text-end">
-                            Change
-                        </a>
-                    </div>
+                        <div class="relative 1 h-[45px] mt-5 pe-3">
+                            <input  type="text" 
+                                    id="first_name" 
+                                    class="md-input-styling peer border border-dark-custom h-[45px] !rounded-lg" 
+                                    placeholder=" " />
+                            
+                            <label for="first_name" class="floating-label">
+                                First Name
+                            </label>
+                        </div>
 
-                    <hr class="col-span-2 mt-3 mb-5">
+                        <div class="relative 1 h-[45px] mt-5">
+                            <input  type="text" 
+                                    id="last_name" 
+                                    class="md-input-styling peer border border-dark-custom h-[45px] !rounded-lg" 
+                                    placeholder=" " />
+                            
+                            <label for="last_name" class="floating-label">
+                                Last Name
+                            </label>
+                        </div>
 
-                    <div class="col-span-2">
-                        <p class="text-xs">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                            <br>
-                            <br>
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                        </p>
+                        <div class="relative 1 h-[45px] mt-5 col-span-2">
+                            <input  type="text" 
+                                    id="street_address" 
+                                    class="md-input-styling peer border border-dark-custom h-[45px] !rounded-lg" 
+                                    placeholder=" " />
+                            
+                            <label for="street_address" class="floating-label">
+                                Street Address
+                            </label>
+                        </div>
+
+                        <div class="relative 1 h-[45px] mt-5 col-span-2">
+                            <input  type="text" 
+                                    id="building_number" 
+                                    class="md-input-styling peer border border-dark-custom h-[45px] !rounded-lg" 
+                                    placeholder=" " />
+                            
+                            <label for="building_number" class="floating-label">
+                                Complex/Building
+                            </label>
+                        </div>
+
+                        <div class="relative 1 h-[45px] mt-5 pe-3">
+                            <input  type="text" 
+                                    id="suburb" 
+                                    class="md-input-styling peer border border-dark-custom h-[45px] !rounded-lg" 
+                                    placeholder=" " />
+                            
+                            <label for="suburb" class="floating-label">
+                                Suburb
+                            </label>
+                        </div>
+
+                        <div class="relative 1 h-[45px] mt-5">
+                            <input  type="text" 
+                                    id="city_town" 
+                                    class="md-input-styling peer border border-dark-custom h-[45px] !rounded-lg" 
+                                    placeholder=" " />
+                            
+                            <label for="city_town" class="floating-label">
+                                City/Town
+                            </label>
+                        </div>
+
+                        <div class="relative 1 h-[45px] mt-5 pe-3">
+                            <input  type="text" 
+                                    id="province" 
+                                    class="md-input-styling peer border border-dark-custom h-[45px] !rounded-lg" 
+                                    placeholder=" " />
+                            
+                            <label for="province" class="floating-label">
+                                Province
+                            </label>
+                        </div>
+
+                        <div class="relative 1 h-[45px] mt-5 ">
+                            <input  type="text" 
+                                    id="postal_code" 
+                                    class="md-input-styling peer border border-dark-custom h-[45px] !rounded-lg" 
+                                    placeholder=" " />
+                            
+                            <label for="postal_code" class="floating-label">
+                                Postal Code
+                            </label>
+                        </div>
+
+                        <div class="col-span-2 mt-5 grid grid-cols-2">
+                            <div class="hidden lg:block"></div>
+                            <div class="grid grid-cols-2 lg:grid-cols-5 col-span-2 lg:col-span-1">
+                                <div class="col-span-1 lg:col-span-2 pe-3 lg:pe-0">
+                                    <button type="button" class="btn-dark-checkout-outline rounded-xl md:me-3 h-12 flex items-center w-full lg:mt-5 lg:mt-0 order-4 lg:order-3 flex justify-evenly">
+                                        Cancel
+                                    </button>
+                                </div>
+                                <div class="col-span-1 lg:col-span-3 lg:ps-3">
+                                    <button type="button" class="btn-checkout-solid">
+                                       Save Address
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
-                </div>
+                </form>
             </div>
 
-            <div class="w-full border border-dark-custom rounded-xl p-8">
+            <div class="w-full border border-dark-custom rounded-xl p-8 mb-8">
                 <p class="text-xl lg:text-2xl font-medium">
                     Select A Payment Method
                 </p>
@@ -69,9 +163,39 @@
                            <%= image_tag 'mastercard-3.svg', class: 'w-[20%]' %>
                         </div>
                     </div>
+                    <div class="flex mt-5">
+                        <a class="text-base text-peak-red w-full text-end">
+                            Change
+                        </a>
+                    </div>
 
                 </div>
             </div>
+
+            <div class="w-full border border-dark-custom rounded-xl p-8">
+                <p class="text-xl lg:text-2xl font-medium">
+                    Add Coupon Code
+                </p>
+                <div class="grid grid-cols-4">
+                    <hr class="col-span-4 mt-3">
+                    <div class="relative col-span-3 h-[45px] mt-6 pe-3">
+                        <input  type="text" 
+                                id="coupon_code" 
+                                class="md-input-styling peer border border-dark-custom h-[45px] !rounded-lg" 
+                                placeholder=" " />
+                        
+                        <label for="coupon_code" class="floating-label">
+                            Contact Relationship
+                        </label>
+                    </div>
+                    <div class="col-span-1 mt-6">
+                        <button type="button" class="btn-checkout-solid">
+                            Apply
+                        </button>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <div class="col-span-3 lg:col-span-2">
@@ -119,19 +243,20 @@
 
                 <div class="lg:pe-2 col-span-2 lg:col-span-1">
                     <button type="button" class="btn-dark-checkout-outline rounded-xl md:me-3 h-12 flex items-center w-full mt-5 lg:mt-0 order-4 lg:order-3 flex justify-evenly">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
-                            <path fill-rule="evenodd" d="M11.03 3.97a.75.75 0 0 1 0 1.06l-6.22 6.22H21a.75.75 0 0 1 0 1.5H4.81l6.22 6.22a.75.75 0 1 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd" />
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 1 0-7.5 0v4.5m11.356-1.993 1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 0 1-1.12-1.243l1.264-12A1.125 1.125 0 0 1 5.513 7.5h12.974c.576 0 1.059.435 1.119 1.007ZM8.625 10.5a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm7.5 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z" />
                         </svg>
-                        Continue Shopping
+
+                        Back to Cart
                     </button>
                 </div>
                 
                 <div class="plg:s-2 col-span-2 lg:col-span-1">
                     <button type="button" class="btn-peak-checkout-red-solid rounded-xl md:me-3 h-12 flex items-center w-full mt-5 lg:mt-0 order-4 lg:order-3 flex justify-evenly">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
-                            <path d="M2.25 2.25a.75.75 0 0 0 0 1.5h1.386c.17 0 .318.114.362.278l2.558 9.592a3.752 3.752 0 0 0-2.806 3.63c0 .414.336.75.75.75h15.75a.75.75 0 0 0 0-1.5H5.378A2.25 2.25 0 0 1 7.5 15h11.218a.75.75 0 0 0 .674-.421 60.358 60.358 0 0 0 2.96-7.228.75.75 0 0 0-.525-.965A60.864 60.864 0 0 0 5.68 4.509l-.232-.867A1.875 1.875 0 0 0 3.636 2.25H2.25ZM3.75 20.25a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM16.5 20.25a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Z" />
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M21 12a2.25 2.25 0 0 0-2.25-2.25H15a3 3 0 1 1-6 0H5.25A2.25 2.25 0 0 0 3 12m18 0v6a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 18v-6m18 0V9M3 12V9m18 0a2.25 2.25 0 0 0-2.25-2.25H5.25A2.25 2.25 0 0 0 3 9m18 0V6a2.25 2.25 0 0 0-2.25-2.25H5.25A2.25 2.25 0 0 0 3 6v3"></path>
                         </svg>
-                        Proceed to Checkout
+                        Make Payment
                     </button>
                 </div>
             </div>
