--- a/app/views/pages/_payment_details.html.erb
+++ b/app/views/pages/_payment_details.html.erb
@@ -27,7 +27,7 @@
                             </div>
                         </div>
                         
-                        <div class="flex flex-row col-span-2 lg:col-span-1 mt-5">
+                        <div class="flex flex-row col-span-2 lg:col-span-1 mt-5 lg:mt-0">
                             <div class="w-full h-[45px] relative flex items-center">
                                 <label for="has_medical_aid_no" class="custom-radio-label ps-5">
                                     Business
@@ -130,7 +130,7 @@
                             <div class="hidden lg:block"></div>
                             <div class="grid grid-cols-2 lg:grid-cols-5 col-span-2 lg:col-span-1">
                                 <div class="col-span-1 lg:col-span-2 pe-3 lg:pe-0">
-                                    <button type="button" class="btn-dark-checkout-outline rounded-xl md:me-3 h-12 flex items-center w-full lg:mt-5 lg:mt-0 order-4 lg:order-3 flex justify-evenly">
+                                    <button type="button" class="btn-dark-checkout-outline rounded-xl md:me-3 h-12 flex items-center w-full mt-5 lg:mt-0 lg:mt-0 order-4 lg:order-3 flex justify-evenly">
                                         Cancel
                                     </button>
                                 </div>
@@ -273,8 +273,8 @@
                             Show Details
                         </a>
                     </div>
-                    <div class="bg-grey-custom flex justify-center items-center rounded-md overflow-hidden w-[100px] aspect-square p-2 mt-3">   
-                        <%= image_tag 'peak.png', class:"w-[80px]" %>
+                    <div class="col-span-2 bg-grey-custom flex justify-center items-center rounded-md overflow-hidden lg:w-[100px] aspect-square p-2 mt-3">   
+                        <%= image_tag 'peak.png', class:"w-[50%] lg:w-[80px]" %>
                     </div>
 
                 </div>
