--- a/app/views/pages/_payment_details.html.erb
+++ b/app/views/pages/_payment_details.html.erb
@@ -1,4 +1,4 @@
-<div class="w-[90%] lg:w-[65%] mx-auto pt-10 lg:py-30">
+<div class="page-container">
     <div class="pb-10 flex items-center flex-col">
         <h2 class="uppercase pod-page-title">
             Review My order
