--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -37,6 +37,10 @@ body {
         @apply w-[90%] mx-auto pt-10 pb-20
     }
 
+    .page-container {
+        @apply w-[90%] lg:w-[65%] mx-auto pt-10 lg:py-30
+    }
+
     /* Buttons */
 
     .btn-dark-solid {
@@ -155,7 +159,7 @@ body {
 
     .floating-label {
         @apply absolute text-sm text-gray-500 
-               duration-300 transform -translate-y-4 scale-75 top-2 z-10 
+               duration-300 transform -translate-y-4 scale-75 top-2 
                origin-[0] bg-[#ffffff] px-2 peer-focus:px-1 
                peer-placeholder-shown:scale-100 
                peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 
