--- a/app/views/pages/_cart_page.html.erb
+++ b/app/views/pages/_cart_page.html.erb
@@ -1,6 +1,6 @@
 <div class="checkout-container">
     <div class="pb-10 flex items-center flex-col">
-        <h2 class="uppercase pod-page-title">
+        <h2 class="uppercase pod-page-title !mb-0">
             My Cart
         </h2>
         <div class="red-accent-pill-large"></div>
