--- a/app/views/pages/_regstration_page.html.erb
+++ b/app/views/pages/_regstration_page.html.erb
@@ -55,9 +55,19 @@
                                 Confirm Password
                             </label>
                         </div>
-                        <div class="col-span-2 mt-5">
-                            <button type="button" class="btn-checkout-solid">
+                        <div class="col-span-8 mt-5">
+                            <button type="button" class="btn-checkout-solid lg:!w-[20%]">
                                 Register
+                            </button>
+                        </div>
+                        <div class="col-span-8 mt-3">
+                            <p>
+                                ALready have an account?
+                            </p>
+                        </div>
+                        <div class="col-span-8 mt-3">
+                            <button type="button" class="btn-dark-checkout-outline w-full lg:!w-[20%]">
+                                Login Here
                             </button>
                         </div>
                     </div>
@@ -66,11 +76,105 @@
         </div>
 
         <div class="col-span-3 lg:col-span-1 rounded-xl p-8 bg-grey-custom ">
-            <div class="grid grid-cols-2">
+            <div class="">
                 <p class="text-xl lg:text-2xl font-medium col-span-1">
                     Your Order
                 </p>
                 <hr class="col-span-2 mt-3 mb-5">
+                <div class="grid grid-cols-5">
+
+                    <div class="col-span-3">
+                        <p class="font-medium">
+                            Description
+                        </p>
+                    </div>
+
+                    <div class="col-span-1">
+                        <p class="font-medium text-center">
+                            QTY
+                        </p>
+                    </div>
+
+                    <div class="col-span-1">
+                        <p class="font-medium text-end">
+                            Total
+                        </p>
+                    </div>
+                </div>
+
+                <div class="grid grid-cols-5 mt-1">
+
+                    <div class="col-span-3">
+                        <p class="text-xs">
+                            PEAK Basketball Shoes Lou Williams Streetball Master Navy
+                        </p>
+                    </div>
+
+                    <div class="col-span-1">
+                        <p class="text-xs font-medium text-center">
+                            99
+                        </p>
+                    </div>
+
+                    <div class="col-span-1">
+                        <p class="text-xs font-medium text-end">
+                            R999999.99
+                        </p>
+                    </div>
+                </div>
+
+
+                <div class="grid grid-cols-5 mt-5">
+
+                    <div class="col-span-3">
+                        <p class="font-medium">
+                            Subtotal
+                        </p>
+                    </div>
+
+                    <div class="col-span-2">
+                        <p class="font-medium text-end">
+                            R 999999.99
+                        </p>
+                    </div>
+                </div>
+
+                <div class="grid grid-cols-5 mt-5">
+
+                    <div class="col-span-3">
+                        <p class="font-medium">
+                            Shipping
+                        </p>
+                    </div>
+
+                    <div class="col-span-2">
+                        <p class="font-medium text-end">
+                            FREE SHIPPING
+                        </p>
+                    </div>
+                </div>
+                <hr class="col-span-2 mt-3 mb-5">
+                <div class="grid grid-cols-8 mt-5">
+                    <div class="col-span-4 mt-5 pe-2">
+                        <button type="button" class="btn-checkout-solid ">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4">
+                                <path fill-rule="evenodd" d="M11.03 3.97a.75.75 0 0 1 0 1.06l-6.22 6.22H21a.75.75 0 0 1 0 1.5H4.81l6.22 6.22a.75.75 0 1 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd"></path>
+                            </svg>
+                            Continue Shopping
+                        </button>
+                    </div>
+
+                    <div class="col-span-2 mt-5">
+                        <button type="button" class="btn-peak-checkout-red-solid w-full">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4">
+                                <path fill-rule="evenodd" d="M11.03 3.97a.75.75 0 0 1 0 1.06l-6.22 6.22H21a.75.75 0 0 1 0 1.5H4.81l6.22 6.22a.75.75 0 1 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd"></path>
+                            </svg>
+                            Back
+                        </button>
+                    </div>
+
+
+                </div>
             </div>
         </div>
     </div>
