--- a/app/views/pages/_review_order_page.html.erb
+++ b/app/views/pages/_review_order_page.html.erb
@@ -1,6 +1,6 @@
 <div class="page-container">
     <div class="pb-10 flex items-center flex-col">
-        <h2 class="uppercase pod-page-title">
+        <h2 class="uppercase pod-page-title !mb-0">
             Review My order
         </h2>
         <div class="red-accent-pill-large"></div>
